fixed user show, testimony show, and testimony index spacing, created comment routes and controller actions, pausing on comments, working on pic upload and more styling

--- a/testify/app/assets/stylesheets/application.scss
+++ b/testify/app/assets/stylesheets/application.scss
@@ -13,3 +13,22 @@
  *= require_tree .
  *= require_self
  */
+
+ #prof_pic{
+ height: 150px;
+ width: 150px;
+ margin: auto;
+ margin-top: 50px;
+ border: 1px solid;
+ }
+
+ #user_show_cont{
+   width: 100%
+ }
+
+
+ #forms {
+   .container {
+     margin-top: 10%;
+   }
+ }
